         before the first access (patch #3543783) (Sergio).
20120716 ui/win32/{win32display.c,win32ui.c}: limit screen updates to the
         rectangle bounding the union of the updated section of the screen
         (patch #3544453) (Sergio).
20120903 debugger/{commandl.[lc]},man/fuse.1: add im, iff1 and iff2 setting and
         getting (Alex Badea).
20120903 ui/gtk/debugger.c,ui/win32/debugger.c: use MEMORY_PAGE_SIZE rather than
         the hardcoded 4K value (Alex Badea).
20120928 memory.c,machines/pentagon.c,snapshot.c: read and write all potential
         1024k worth of memory pages from a snap, initialise the Pentagon 1024k
         memory ports from a snapshot and ensure that we respect the paged state
         of the Beta ROM when loading Pentagon 128k/512k/1024k snapshots (ketmar
         and Fred).
20120928 memory.c,machines/pentagon.c,snapshot.c: tweak copyright dates (Fred).
20121003 compat.h,compat/Makefile.am,compat/amiga/{Makefile.am,paths.c},
         compat/linux/{Makefile.am,paths.c},compat/unix/{Makefile.am,paths.c},
         compat/wii/paths.c,compat/win32/paths.c,configure.in,fuse.[ch],
         utils.[ch]: add a compat function for get_next_dir() to accommodate
         platform-specific strategies for locating resources (bug #3571689)
         (Sergio).
20121010 compat/{linux/paths.c,win32/paths.c}: add missing #include <string.h>
         (more from bug #3571689) (Sergio).
20121010 configure.in,fuse.c,ui/gtk/gtkui.c,ui/widget/menu.c,
         ui/win32/{Makefile.am,about.c,about.rc},
         ui/win32/installer/{Makefile.am,fuse.nsi,fuse.nsi.in},windres.rc: have
         configure.in as the repository of version, copyright and URL
         information (patch #3575830) (Sergio).
20121010 configure.in: remove some obsolete autoconf macros (patch #3575831)
         (Sergio).
20121010 configure.ac: rename configure.in to configure.ac as that is the new
         standard (Fred).